<resources>
    <string name="app_name">Nadris</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="textView_register_as_student">Register as student</string>
    <string name="textView_back"><![CDATA[<]]></string>
    <string name="edt_first_name">First Name</string>
    <string name="edt_last_name">Last Name</string>
    <string name="edt_email_signup">Email</string>
    <string name="edt_phone_signup">Phone Number</string>
    <string name="edt_password_1_signup">Password</string>
    <string name="edt_password_2_signup">Password again</string>
    <string name="confirm">Confirm</string>
    <string name="textView_register_as_teacher">Signup as Teacher</string>
    <string name="SP_Signup_teacher_collage">Collage</string>
    <string name="sp_university_teacher_signup">University</string>
    <string name="sp_subject_teacher_signup">Subject</string>
    <string name="sp_gender_teacher_signup">Gender</string>
    <string name="term">Term</string>
    <string-array name="GenderList">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="grades_levels">
        <item>prep</item>
        <item>high</item>
    </string-array>
    <string name="verifying_phone_text">Validate mobile number</string>
    <string name="did_not_receive_the_code_yet_txt">didn\'t receive the code yet?</string>
    <string name="textView_Welcome_in_nadris">Welcome To Nadris</string>
    <string name="edt_E_mail_or_Phone_hint">Email or Phone</string>
    <string name="edt_password_login">Password</string>
    <string name="btn_sign_in_login">Login</string>
    <string name="textView_HaveAccount_login">doesn\'t have account yet?</string>
    <string name="btn_new_account_login">Create Account</string>
    <string name="textView_register_as_signup">Signup as</string>
    <string name="textView_student_signup">Student</string>
    <string name="textView_parent">parent</string>
    <string name="textView_other">other</string>
    <string name="textView_teacher_signup">Teacher</string>
    <string name="textView_HaveAccount_SignIn">Do you have account?</string>
    <string name="textView_account_login">
        <u>Login</u>
    </string>
    <string name="wrong_OTB_text_dialog">Worng OTP</string>
    <string name="back_txt">Back</string>
    <string name="next_txt">next</string>
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="delete_symbol">⌦</string>
    <string name="confirm_txt">confirm</string>
    <string name="wrong_credentials">"worng email or password please "</string>
    <string name="Required1">" "</string>
    <string name="Required">" required"</string>
    <string name="search">Search</string>
    <string name="welcome">good morining</string>
    <string name="yourQus">what\'s your question..?</string>
    <string name="addImage">add image or file +</string>
    <string name="PublisQus">publish question</string>
    <string name="vote">%o votes</string>
    <string name="reply">%o replay</string>
    <string name="_1">(1)</string>
    <string name="save">save</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string-array name="university">
        <item>جامعة القاهرة</item>
        <item>جامعة الإسكندرية</item>
        <item>جامعة أسوان</item>
        <item>جامعة أسيوط</item>
        <item>جامعة بنها</item>
        <item>جامعة بني سويف</item>
        <item>جامعة بورسعيد</item>
        <item>جامعة جنوب الوادي</item>
        <item>جامعة المنصورة</item>
        <item>جامعة الأزهر</item>
    </string-array>
    <string-array name="GradeList">
        <item>اولي ثانوي</item>
        <item>تانية ثانوي</item>
        <item>تالتة ثانوي</item>
    </string-array>
    <string-array name="collage">
        <item>تربية</item>
        <item>العلوم</item>
    </string-array>
    <string name="subject">select subject</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="student_home_title">home</string>
    <string name="posts_fragment_label">Home</string>
    <string name="student_subjects_title">subject</string>
    <string name="student_schedual_title">schedule</string>
    <string name="name">name</string>
    <string name="post">this is a post</string>
    <string name="title_activity_student_home">StudentHome</string>
    <string name="title_activity_studnet_main_acitivity">StudnetMainAcitivity</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="wron_cridentials">worng email or password please try again later</string>
    <string name="namesubjects">subjects</string>
    <string name="TvChoseTeachers">choose a teacher</string>
    <string name="btn_joining">join</string>
    <string name="tv_name_subject_phyiscs">physics</string>
    <string name="tv_count_student_on_all_subjects">160</string>
    <string name="tv_count_teacher_on_all_subjects">15</string>
    <string name="tv_item_st_count">student</string>
    <string name="tv_item_teach_count">teacher</string>
    <string name="tv_name_teachers">mohamed mostafa</string>
    <string name="tv_content_description">Explanation and references</string>
    <string name="tv_add_teacher">add</string>
    <string name="tv_star">* * *</string>
    <string name="tv_evaluation">4.8</string>
    <string name="my_course">subjects</string>
    <string name="add_subject">add subject</string>
    <string name="add_explain_subject">add subject content</string>
    <string name="btn_modification">edit</string>
    <string name="tv_semester">first term</string>
    <string name="tv_class">Third Grade</string>
    <string name="autoCompleteTV_choose_class">chosse grade</string>
    <string name="btn_add_new_subject">add subject</string>
    <string name="autoCompleteTV_choose_subjects">choose subject</string>
    <string name="autoCompleteTV_choose_semester">choose grade</string>
    <string name="content_comment">أستاذ شاطر جدا ومجتهد ومهتم بالطالب لأقصي درجه</string>
    <string name="name_acount_add_comment">محمد مصطفي</string>
    <string name="add_comment">add reply</string>
    <string name="title_activity_login">Login activity</string>
    <string name="btn_add_comment">go</string>
    <string-array name="term_list">
        <item>first term</item>
        <item>second term</item>
    </string-array>
    <string-array name="add_Photo">
        <item>Take photo</item>
        <item>Choose from gallery</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="image_click_options">
        <item>view photo</item>
        <item>take photo</item>
        <item>upload photo</item>
        <item>remove photo</item>
    </string-array>
    <string-array name="null_image_click_options">
        <item>take photo</item>
        <item>upload photo</item>
    </string-array>
    <string-array name="LanguageOptions">
        <item>English</item>
        <item>عربي</item>
    </string-array>
    <string-array name="ThemOptions">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
    <string-array name="ChangeClass">
        <item>prep first</item>
        <item>prep second</item>
        <item>prep third</item>
        <item>High school first</item>
        <item>High school second</item>
        <item>High school third</item>
    </string-array>
    <string name="dlg_add_photo_title">Add Photo</string>
    <string name="add_post_requirments">Subject and question are required</string>
    <string name="permission_granted">permission Granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="permission_needed">permission needed</string>
    <string name="storage_permission_request">storage permission needed to use files</string>
    <string name="cancel">cancel</string>
    <string name="camera_permission_request">camera permission needed to pick image</string>
    <string name="select_grade">select grade</string>
    <string name="last_activities">Last Activities</string>
    <string name="tv_posts">Posts</string>
    <string name="tv_num_posts">147</string>
    <string name="tv_name_profile">Mohamed Mostafa</string>
    <string name="specialty_profile">3rd grade high school student</string>
    <string name="tv_followers">followers:</string>
    <string name="tv_following">following</string>
    <string name="Settings">Settings</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_change_class">Change Class</string>
    <string name="tv_night_mode">Night Mode</string>
    <string name="tv_change_language">Change Language</string>
    <string name="tv_help">Help</string>
    <string name="tv_sign_out">Sign Out</string>
    <string name="profile">profile</string>
    <string name="tgbtn_add_frind">add friend</string>
    <string name="my_subjects_fragment_label">My Subjects</string>
    <string name="video_link_input_hint">video link</string>
    <string name="please_enter_num_of_sections_hin">please enter the num of the sections</string>
    <string name="proceed">procceed</string>
    <string name="text_editor_label">Text Editor</string>
    <string name="adding_subject_sections_label">Adding Subject Sections</string>
    <string name="adding_sections_title">Unit %o : lesson %o ( %s )</string>
    <string name="edt_new_passowrd">New Password</string>
    <string name="edt_old_password">old Password</string>
    <string name="btn_save">Save</string>
    <string name="btn_close">Colse</string>
    <string name="delete_discussion_meu_item_string">delete</string>
    <string name="edit_discussion_menu_item_string">edit</string>
    <string name="save_edits">save edits</string>
    <string name="save_discussion_btn_title">save discussion</string>
    <string name="user_lang_pre" translatable="false">selectedLanguage</string>
    <string name="select_language_title">please select a language</string>
    <string name="confirm_lang_sel_btn_title">choose</string>
    <string name="lang_not_sel_msg">please select a language</string>
    <string name="retry_checking_connection_btn_title">Retry</string>
    <string name="sp_gender_title">gender</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="post_bookmarked_successfully">"bookmarked "</string>
    <string name="cant_bookmark_post">somthing went wrong post can\'t be bookmarked</string>
    <string-array name="languages">
        <item>English</item>
        <item>العربية</item>
    </string-array>
    <string name="enter_your_question">ENTER YOUR QUESTION</string>
    <string name="progressQuiz">1/5</string>
    <string name="option">option1</string>
    <string name="submit">Submit</string>
    <string name="add_quiz">add Quiz</string>
    <string name="question_text">Untitled question</string>
    <string name="answer_1">answer 1</string>
    <string name="answer_2">answer 2</string>
    <string name="answer_3">answer 3</string>
    <string name="answer_4">answer 4</string>
    <string name="add_question">add question</string>
    <string name="answer_location">AnswerLocation</string>
    <string name="ex_unit_5_lesson_3">ex: unit 5 - lesson 3</string>
    <string name="result">Result</string>
    <string name="result_congrats">Yay! you scored 84 out 100</string>
    <string name="titlequiz">titleQuiz</string>
    <string name="questions">Questions</string>
    <string name="teacherName">teacherName</string>
</resources>