<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.studentActivity.settings.SettingsFragment"
    >

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_setting"
        >

        <ImageView
            android:id="@+id/imag_back_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:id="@+id/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="@style/material_text_header_small"
            android:text="@string/Settings" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:background="@color/backwhite"
            >

            <TextView
                android:id="@+id/tv_edit_profile"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_edit_profile" />

            <TextView
                android:id="@+id/tv_change_password"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_change_password" />

            <TextView
                android:id="@+id/tv_change_class"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_change_class" />

            <TextView
                android:id="@+id/tv_night_mode"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_night_mode" />

            <TextView
                android:id="@+id/tv_change_language"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_change_language" />

            <TextView
                android:id="@+id/tv_help"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_help" />

            <TextView
                android:id="@+id/tv_sign_out"
                style="@style/material_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/tv_sign_out" />







        </LinearLayout>



    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>