<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <com.google.android.material.card.MaterialCardView
        style="@style/material_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_title_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/material_text_header_small"
            android:text="@string/titlequiz"
            android:gravity="center"
            android:layout_marginTop="@dimen/mid_margin"
            android:layout_marginStart="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/num_of_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/material_text_body_small"
            android:text="@string/tv_count_student_on_all_subjects"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/mid_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_quiz"
        />



        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/material_text_body_small"
            android:text="@string/questions"
            app:layout_constraintBottom_toBottomOf="@id/num_of_question"
            app:layout_constraintStart_toEndOf="@id/num_of_question"
            app:layout_constraintTop_toTopOf="@id/num_of_question"
            android:layout_marginStart="@dimen/small_margin"
        />
        <TextView
            android:id="@+id/teacher_name"
            style="@style/material_text_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacherName"
            android:layout_marginTop="@dimen/mid_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/num_of_question"/>
        <TextView
            android:id="@+id/tv_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/material_text_body"
            android:text="@string/tv_class"
            android:layout_marginTop="@dimen/mid_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginStart="@dimen/large_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teacher_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_semester"
            style="@style/material_text_body"
            android:layout_margin="@dimen/mid_margin"
            app:layout_constraintBottom_toBottomOf="@id/tv_class"
            app:layout_constraintStart_toEndOf="@+id/tv_class"
            app:layout_constraintTop_toTopOf="@+id/tv_class"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>