<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/material_card"
        android:layout_margin="@dimen/small_margin">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Question_text"
                style="@style/material_text_body"
                android:layout_width="@dimen/match_constrain"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/enter_your_question"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/text_answer_one"
                android:layout_width="@dimen/match_constrain"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:gravity="center"
                android:text="@string/answer_1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_answer_two"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/Question_text"/>
            <TextView
                android:id="@+id/text_answer_two"
                android:layout_width="@dimen/match_constrain"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:gravity="center"
                android:text="@string/answer_2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/text_answer_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_answer_one" app:layout_constraintTop_toTopOf="@id/text_answer_one"/>
            <TextView
                android:id="@+id/text_answer_three"
                android:layout_width="@dimen/match_constrain"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:gravity="center"
                android:text="@string/answer_3"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/location_text"
                app:layout_constraintEnd_toStartOf="@id/text_answer_four"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_answer_one"/>
            <TextView
                android:id="@+id/text_answer_four"
                android:layout_width="@dimen/match_constrain"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:gravity="center"
                android:text="@string/answer_4"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/text_answer_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_answer_three"
                app:layout_constraintTop_toTopOf="@id/text_answer_three"/>
            <TextView
                android:id="@+id/TV_answer_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/location_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/location_text"
                app:layout_constraintStart_toEndOf="@id/location_text"
                android:text="@string/answer_location"
                android:layout_marginEnd="@dimen/mid_margin"
                style="@style/material_text_body"
                android:gravity="center"
            />
            <TextView
                android:id="@+id/location_text"
                android:layout_width="@dimen/match_constrain"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mid_margin"
                android:text="@string/ex_unit_5_lesson_3"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/TV_answer_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_answer_three"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>