<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <com.google.android.material.card.MaterialCardView
        style="@style/material_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_sub_teach"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/match_constrain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/mid_margin"
                app:layout_constraintEnd_toStartOf="@id/tv_name_subject_teacher"
                app:srcCompat="@drawable/ic_google"/>

            <TextView
                android:id="@+id/tv_name_subject_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/material_text_header_small"
                android:text="@string/tv_name_subject_phyiscs"
                app:layout_constraintStart_toStartOf="@id/num_of_students"
                app:layout_constraintTop_toTopOf="@id/img_sub_teach"
                app:layout_constraintBottom_toTopOf="@id/num_of_students"

            />

            <TextView
                android:id="@+id/num_of_students"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/material_text_body_small"
                android:text="@string/tv_count_student_on_all_subjects"
                android:layout_margin="@dimen/mid_margin"
                app:layout_constraintBottom_toTopOf="@id/tv_class"
                app:layout_constraintStart_toEndOf="@id/img_sub_teach"
                app:layout_constraintTop_toBottomOf="@id/tv_name_subject_teacher"
            />



            <TextView
                android:id="@+id/tv_item_st_count_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/material_text_body_small"
                android:text="@string/tv_item_st_count"
                app:layout_constraintBottom_toBottomOf="@id/num_of_students"
                app:layout_constraintStart_toEndOf="@+id/num_of_students"
                app:layout_constraintTop_toTopOf="@+id/num_of_students"
            />

            <TextView
                android:id="@+id/tv_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/material_text_body"
                android:text="@string/tv_class"
                android:layout_margin="@dimen/mid_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_sub_teach"/>

            <TextView
                android:id="@+id/tv_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_semester"
                style="@style/material_text_body"
                android:layout_margin="@dimen/mid_margin"
                app:layout_constraintBottom_toBottomOf="@id/tv_class"
                app:layout_constraintStart_toEndOf="@+id/tv_class"
                app:layout_constraintTop_toTopOf="@+id/tv_class"
            />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>